--- a/Config/SteamVRBindings/steamvr_manifest.json
+++ b/Config/SteamVRBindings/steamvr_manifest.json
@@ -63,6 +63,11 @@
 			"requirement": "optional"
 		},
 		{
+			"name": "/actions/main/in/open_console",
+			"type": "boolean",
+			"requirement": "optional"
+		},
+		{
 			"name": "/actions/main/out/vibrateleft",
 			"type": "vibration",
 			"requirement": "optional"
@@ -73,13 +78,60 @@
 			"requirement": "optional"
 		},
 		{
-			"name": "/actions/main/in/open_console",
-			"type": "boolean",
-			"requirement": "optional"
+			"name": "/actions/main/in/LeftGrip",
+			"type": "boolean"
 		},
 		{
-			"name": "/actions/main/in/GrabRight",
+			"name": "/actions/main/in/RightGrip",
 			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/LeftTriggerPull axis",
+			"type": "vector1"
+		},
+		{
+			"name": "/actions/main/in/LeftTriggerClick",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/RightTriggerPull axis",
+			"type": "vector1"
+		},
+		{
+			"name": "/actions/main/in/RightTriggerClick",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/LeftButtonA",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/RightButtonA",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/LeftButtonB",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/RightButtonB",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/LeftThumbStick",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/RightThumbStick",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/MotionControllerThumbLeft_X,MotionControllerThumbLeft_Y X Y_axis2d",
+			"type": "vector2"
+		},
+		{
+			"name": "/actions/main/in/MotionControllerThumbRight_X,MotionControllerThumbRight_Y X Y_axis2d",
+			"type": "vector2"
 		}
 	],
 	"action_sets": [
@@ -90,48 +142,8 @@
 	],
 	"default_bindings": [
 		{
-			"controller_type": "gamepad",
-			"binding_url": "gamepad.json"
-		},
-		{
-			"controller_type": "holographic_controller",
-			"binding_url": "holographic_controller.json"
-		},
-		{
-			"controller_type": "indexhmd",
-			"binding_url": "indexhmd.json"
-		},
-		{
-			"controller_type": "knuckles",
-			"binding_url": "knuckles.json"
-		},
-		{
-			"controller_type": "oculus_touch",
-			"binding_url": "oculus_touch.json"
-		},
-		{
-			"controller_type": "rift",
-			"binding_url": "rift.json"
-		},
-		{
-			"controller_type": "vive",
-			"binding_url": "vive.json"
-		},
-		{
-			"controller_type": "vive_controller",
-			"binding_url": "vive_controller.json"
-		},
-		{
-			"controller_type": "vive_cosmos_controller",
-			"binding_url": "vive_cosmos_controller.json"
-		},
-		{
-			"controller_type": "vive_pro",
-			"binding_url": "vive_pro.json"
-		},
-		{
-			"controller_type": "vive_tracker_camera",
-			"binding_url": "vive_tracker_camera.json"
+			"controller_type": "index_hmd",
+			"binding_url": "index_hmd.json"
 		},
 		{
 			"controller_type": "knuckles",
@@ -142,8 +154,12 @@
 			"binding_url": "vive_controller.json"
 		},
 		{
-			"controller_type": "vive_cosmos_controller",
-			"binding_url": "vive_cosmos_controller.json"
+			"controller_type": "vive_tracker",
+			"binding_url": "vive_tracker.json"
+		},
+		{
+			"controller_type": "vive",
+			"binding_url": "vive.json"
 		},
 		{
 			"controller_type": "oculus_touch",
@@ -152,26 +168,6 @@
 		{
 			"controller_type": "holographic_controller",
 			"binding_url": "holographic_controller.json"
-		},
-		{
-			"controller_type": "indexhmd",
-			"binding_url": "indexhmd.json"
-		},
-		{
-			"controller_type": "vive",
-			"binding_url": "vive.json"
-		},
-		{
-			"controller_type": "vive_pro",
-			"binding_url": "vive_pro.json"
-		},
-		{
-			"controller_type": "rift",
-			"binding_url": "rift.json"
-		},
-		{
-			"controller_type": "vive_tracker_camera",
-			"binding_url": "vive_tracker_camera.json"
 		},
 		{
 			"controller_type": "gamepad",
@@ -193,10 +189,23 @@
 			"/actions/main/in/special8": "Special 8 [Tracker]",
 			"/actions/main/in/skeletonleft": "Skeleton (Left)",
 			"/actions/main/in/skeletonright": "Skeleton (Right)",
+			"/actions/main/in/open_console": "Open Console",
 			"/actions/main/out/vibrateleft": "Haptic (Left)",
 			"/actions/main/out/vibrateright": "Haptic (Right)",
-			"/actions/main/in/open_console": "Open Console",
-			"/actions/main/in/GrabRight": "GrabRight",
+			"/actions/main/in/LeftGrip": "LeftGrip",
+			"/actions/main/in/RightGrip": "RightGrip",
+			"/actions/main/in/LeftTriggerPull axis": "LeftTriggerPull",
+			"/actions/main/in/LeftTriggerClick": "LeftTriggerClick",
+			"/actions/main/in/RightTriggerPull axis": "RightTriggerPull",
+			"/actions/main/in/RightTriggerClick": "RightTriggerClick",
+			"/actions/main/in/LeftButtonA": "LeftButtonA",
+			"/actions/main/in/RightButtonA": "RightButtonA",
+			"/actions/main/in/LeftButtonB": "LeftButtonB",
+			"/actions/main/in/RightButtonB": "RightButtonB",
+			"/actions/main/in/LeftThumbStick": "LeftThumbStick",
+			"/actions/main/in/RightThumbStick": "RightThumbStick",
+			"/actions/main/in/MotionControllerThumbLeft_X,MotionControllerThumbLeft_Y X Y_axis2d": "MotionControllerThumbLeft",
+			"/actions/main/in/MotionControllerThumbRight_X,MotionControllerThumbRight_Y X Y_axis2d": "MotionControllerThumbRight",
 			"/actions/main": "Main Game Actions"
 		}
 	]
