VRMovement + Hands! + UE4.25 Plus
sry lads, gotta use the UE branch now

--- a/Config/steamvr_ue_editor_app.json
+++ b/Config/steamvr_ue_editor_app.json
@@ -2,15 +2,15 @@
 	"source": "UE",
 	"applications": [
 		{
-			"app_key": "application.generated.ue.fsd-14469661.ue4editor.exe",
+			"app_key": "application.generated.ue.fsd-0.ue4editor.exe",
 			"launch_type": "url",
 			"url": "steam://launch/",
-			"action_manifest_path": "E:/Documents/GitHub/virtual-rock-galactic/Config/SteamVRBindings/steamvr_manifest.json",
+			"action_manifest_path": "E:/Documents/GitHub/virtual-rock-galactic 4.25/Config/SteamVRBindings/steamvr_manifest.json",
 			"strings":
 			{
 				"en_us":
 				{
-					"name": "FSD-14469661 [UE Editor]"
+					"name": "FSD-0 [UE Editor]"
 				}
 			}
 		}
