--- a/FSD.uproject
+++ b/FSD.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.25",
+	"EngineAssociation": "{79623F06-4436-A40E-6CDE-ECAA9605BDC9}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
