Add a separate mesh for left hand

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,5 +4,6 @@
 bShareMaterialShaderCode=False
 UsePakFile=False
 bGenerateChunks=False
-IncludeDebugFiles=True
+IncludeDebugFiles=False
+Build=Never
 
