Bound Floating VR menus to "LeftButtonB"

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -89,6 +89,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="RightButtonB",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_B_Click)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Thumbstick_Click)
 +ActionMappings=(ActionName="RightThumbStick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Thumbstick_Click)
++ActionMappings=(ActionName="LeftThumbStick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Thumbstick_Click)
 +AxisMappings=(AxisName="LeftTriggerPull",Scale=1.000000,Key=OculusTouch_Left_Trigger_Axis)
 +AxisMappings=(AxisName="RightTriggerPull",Scale=1.000000,Key=OculusTouch_Right_Trigger_Axis)
 +AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
