- WORKING MAP (WIP) (bound to x button) - fix 2D UI overlay on face in caves by summoning map

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -123,6 +123,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Thumbstick_Click)
 +ActionMappings=(ActionName="RightThumbStick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Right_Thumbstick_Click)
 +ActionMappings=(ActionName="LeftThumbStick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Thumbstick_Click)
++ActionMappings=(ActionName="MapTool",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +AxisMappings=(AxisName="LeftTriggerPull",Scale=1.000000,Key=OculusTouch_Left_Trigger_Axis)
 +AxisMappings=(AxisName="RightTriggerPull",Scale=1.000000,Key=OculusTouch_Right_Trigger_Axis)
 +AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
