- coilgun ready for beta (crashes prevented much testing) - some weird SteamVR binding stuff, wtf

--- a/Config/SteamVRBindings/steamvr_manifest.json
+++ b/Config/SteamVRBindings/steamvr_manifest.json
@@ -11,42 +11,112 @@
 			"requirement": "optional"
 		},
 		{
-			"name": "/actions/main/in/special1",
+			"name": "/actions/main/in/tracker_camera",
 			"type": "pose",
 			"requirement": "optional"
 		},
 		{
-			"name": "/actions/main/in/special2",
+			"name": "/actions/main/in/tracker_chest",
 			"type": "pose",
 			"requirement": "optional"
 		},
 		{
-			"name": "/actions/main/in/special3",
+			"name": "/actions/main/in/tracker_shoulder_left",
 			"type": "pose",
 			"requirement": "optional"
 		},
 		{
-			"name": "/actions/main/in/special4",
+			"name": "/actions/main/in/tracker_shoulder_right",
 			"type": "pose",
 			"requirement": "optional"
 		},
 		{
-			"name": "/actions/main/in/special5",
+			"name": "/actions/main/in/tracker_elbow_left",
 			"type": "pose",
 			"requirement": "optional"
 		},
 		{
-			"name": "/actions/main/in/special6",
+			"name": "/actions/main/in/tracker_elbow_right",
 			"type": "pose",
 			"requirement": "optional"
 		},
 		{
-			"name": "/actions/main/in/special7",
+			"name": "/actions/main/in/tracker_knee_left",
 			"type": "pose",
 			"requirement": "optional"
 		},
 		{
-			"name": "/actions/main/in/special8",
+			"name": "/actions/main/in/tracker_knee_right",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_waist",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_foot_left",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_foot_right",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_keyboard",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_handed_pose_left",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_handed_pose_right",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_handed_back_left",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_handed_back_right",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_handed_front_left",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_handed_front_right",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_handed_frontr_left",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_handed_frontr_right",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_handed_grip_left",
+			"type": "pose",
+			"requirement": "optional"
+		},
+		{
+			"name": "/actions/main/in/tracker_handed_grip_right",
 			"type": "pose",
 			"requirement": "optional"
 		},
@@ -118,6 +188,82 @@
 			"type": "boolean"
 		},
 		{
+			"name": "/actions/main/in/LeftThumbStick",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Left_WorldMovement",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Left_Modifier",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Left_TrackpadDown",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Left_TrackpadLeft",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Left_TrackpadRight",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Left_TrackpadUp",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Left_ConfirmRadialSelection",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Left_Touch",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Left_Modifier2",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Right_WorldMovement",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Right_Modifier",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Right_TrackpadDown",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Right_TrackpadLeft",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Right_TrackpadRight",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Right_TrackpadUp",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Right_ConfirmRadialSelection",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Right_Touch",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Right_Modifier2",
+			"type": "boolean"
+		},
+		{
 			"name": "/actions/main/in/LeftTriggerPull axis",
 			"type": "vector1"
 		},
@@ -132,6 +278,18 @@
 		{
 			"name": "/actions/main/in/MotionControllerThumbRight_X,MotionControllerThumbRight_Y X Y_axis2d",
 			"type": "vector2"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Left_TriggerAxis axis",
+			"type": "vector1"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Left_WorldMovement axis",
+			"type": "vector1"
+		},
+		{
+			"name": "/actions/main/in/VREditor_Right_TriggerAxis axis",
+			"type": "vector1"
 		}
 	],
 	"action_sets": [
@@ -150,6 +308,10 @@
 			"binding_url": "holographic_controller.json"
 		},
 		{
+			"controller_type": "hpmotioncontroller",
+			"binding_url": "hpmotioncontroller.json"
+		},
+		{
 			"controller_type": "indexhmd",
 			"binding_url": "indexhmd.json"
 		},
@@ -182,8 +344,60 @@
 			"binding_url": "vive_pro.json"
 		},
 		{
+			"controller_type": "vive_tracker",
+			"binding_url": "vive_tracker.json"
+		},
+		{
 			"controller_type": "vive_tracker_camera",
 			"binding_url": "vive_tracker_camera.json"
+		},
+		{
+			"controller_type": "vive_tracker_chest",
+			"binding_url": "vive_tracker_chest.json"
+		},
+		{
+			"controller_type": "vive_tracker_handed",
+			"binding_url": "vive_tracker_handed.json"
+		},
+		{
+			"controller_type": "vive_tracker_keyboard",
+			"binding_url": "vive_tracker_keyboard.json"
+		},
+		{
+			"controller_type": "vive_tracker_left_elbow",
+			"binding_url": "vive_tracker_left_elbow.json"
+		},
+		{
+			"controller_type": "vive_tracker_left_foot",
+			"binding_url": "vive_tracker_left_foot.json"
+		},
+		{
+			"controller_type": "vive_tracker_left_knee",
+			"binding_url": "vive_tracker_left_knee.json"
+		},
+		{
+			"controller_type": "vive_tracker_left_shoulder",
+			"binding_url": "vive_tracker_left_shoulder.json"
+		},
+		{
+			"controller_type": "vive_tracker_right_elbow",
+			"binding_url": "vive_tracker_right_elbow.json"
+		},
+		{
+			"controller_type": "vive_tracker_right_foot",
+			"binding_url": "vive_tracker_right_foot.json"
+		},
+		{
+			"controller_type": "vive_tracker_right_knee",
+			"binding_url": "vive_tracker_right_knee.json"
+		},
+		{
+			"controller_type": "vive_tracker_right_shoulder",
+			"binding_url": "vive_tracker_right_shoulder.json"
+		},
+		{
+			"controller_type": "vive_tracker_waist",
+			"binding_url": "vive_tracker_waist.json"
 		},
 		{
 			"controller_type": "knuckles",
@@ -206,6 +420,10 @@
 			"binding_url": "holographic_controller.json"
 		},
 		{
+			"controller_type": "hpmotioncontroller",
+			"binding_url": "hpmotioncontroller.json"
+		},
+		{
 			"controller_type": "indexhmd",
 			"binding_url": "indexhmd.json"
 		},
@@ -222,8 +440,60 @@
 			"binding_url": "rift.json"
 		},
 		{
+			"controller_type": "vive_tracker",
+			"binding_url": "vive_tracker.json"
+		},
+		{
 			"controller_type": "vive_tracker_camera",
 			"binding_url": "vive_tracker_camera.json"
+		},
+		{
+			"controller_type": "vive_tracker_waist",
+			"binding_url": "vive_tracker_waist.json"
+		},
+		{
+			"controller_type": "vive_tracker_left_foot",
+			"binding_url": "vive_tracker_left_foot.json"
+		},
+		{
+			"controller_type": "vive_tracker_right_foot",
+			"binding_url": "vive_tracker_right_foot.json"
+		},
+		{
+			"controller_type": "vive_tracker_left_shoulder",
+			"binding_url": "vive_tracker_left_shoulder.json"
+		},
+		{
+			"controller_type": "vive_tracker_right_shoulder",
+			"binding_url": "vive_tracker_right_shoulder.json"
+		},
+		{
+			"controller_type": "vive_tracker_left_elbow",
+			"binding_url": "vive_tracker_left_elbow.json"
+		},
+		{
+			"controller_type": "vive_tracker_right_elbow",
+			"binding_url": "vive_tracker_right_elbow.json"
+		},
+		{
+			"controller_type": "vive_tracker_left_knee",
+			"binding_url": "vive_tracker_left_knee.json"
+		},
+		{
+			"controller_type": "vive_tracker_right_knee",
+			"binding_url": "vive_tracker_right_knee.json"
+		},
+		{
+			"controller_type": "vive_tracker_chest",
+			"binding_url": "vive_tracker_chest.json"
+		},
+		{
+			"controller_type": "vive_tracker_keyboard",
+			"binding_url": "vive_tracker_keyboard.json"
+		},
+		{
+			"controller_type": "vive_tracker_handed",
+			"binding_url": "vive_tracker_handed.json"
 		},
 		{
 			"controller_type": "gamepad",
@@ -235,14 +505,28 @@
 			"language_tag": "en_us",
 			"/actions/main/in/controllerleft": "Left Controller [Pose]",
 			"/actions/main/in/controllerright": "Right Controller [Pose]",
-			"/actions/main/in/special1": "Special 1 [Tracker]",
-			"/actions/main/in/special2": "Special 2 [Tracker]",
-			"/actions/main/in/special3": "Special 3 [Tracker]",
-			"/actions/main/in/special4": "Special 4 [Tracker]",
-			"/actions/main/in/special5": "Special 5 [Tracker]",
-			"/actions/main/in/special6": "Special 6 [Tracker]",
-			"/actions/main/in/special7": "Special 7 [Tracker]",
-			"/actions/main/in/special8": "Special 8 [Tracker]",
+			"/actions/main/in/tracker_camera": "Camera [Tracker]",
+			"/actions/main/in/tracker_chest": "Chest [Tracker]",
+			"/actions/main/in/tracker_shoulder_left": "Shoulder Left [Tracker]",
+			"/actions/main/in/tracker_shoulder_right": "Shoulder Right [Tracker]",
+			"/actions/main/in/tracker_elbow_left": "Elbow Left [Tracker]",
+			"/actions/main/in/tracker_elbow_right": "Elbow Right [Tracker]",
+			"/actions/main/in/tracker_knee_left": "Knee Left [Tracker]",
+			"/actions/main/in/tracker_knee_right": "Knee Right [Tracker]",
+			"/actions/main/in/tracker_waist": "Waist [Tracker]",
+			"/actions/main/in/tracker_foot_left": "Foot Left [Tracker]",
+			"/actions/main/in/tracker_foot_right": "Foot Right [Tracker]",
+			"/actions/main/in/tracker_keyboard": "Keyboard [Tracker]",
+			"/actions/main/in/tracker_handed_pose_left": "Raw Pose Left [Tracker]",
+			"/actions/main/in/tracker_handed_pose_right": "Raw Pose Right [Tracker]",
+			"/actions/main/in/tracker_handed_back_left": "Handed Back Left [Tracker]",
+			"/actions/main/in/tracker_handed_back_right": "Handed Back Right [Tracker]",
+			"/actions/main/in/tracker_handed_front_left": "Handed Front Left [Tracker]",
+			"/actions/main/in/tracker_handed_front_right": "Handed Front Right [Tracker]",
+			"/actions/main/in/tracker_handed_frontr_left": "Handed Front Rolled Left [Tracker]",
+			"/actions/main/in/tracker_handed_frontr_right": "Handed Front Rolled Right [Tracker]",
+			"/actions/main/in/tracker_handed_grip_left": "Handed Pistol Grip Left [Tracker]",
+			"/actions/main/in/tracker_handed_grip_right": "Handed Pistol Grip Right [Tracker]",
 			"/actions/main/in/skeletonleft": "Skeleton (Left)",
 			"/actions/main/in/skeletonright": "Skeleton (Right)",
 			"/actions/main/out/vibrateleft": "Haptic (Left)",
@@ -258,10 +542,32 @@
 			"/actions/main/in/RightButtonB": "RightButtonB",
 			"/actions/main/in/Sprint": "Sprint",
 			"/actions/main/in/RightThumbStick": "RightThumbStick",
+			"/actions/main/in/LeftThumbStick": "LeftThumbStick",
+			"/actions/main/in/VREditor_Left_WorldMovement": "VREditor_Left_WorldMovement",
+			"/actions/main/in/VREditor_Left_Modifier": "VREditor_Left_Modifier",
+			"/actions/main/in/VREditor_Left_TrackpadDown": "VREditor_Left_TrackpadDown",
+			"/actions/main/in/VREditor_Left_TrackpadLeft": "VREditor_Left_TrackpadLeft",
+			"/actions/main/in/VREditor_Left_TrackpadRight": "VREditor_Left_TrackpadRight",
+			"/actions/main/in/VREditor_Left_TrackpadUp": "VREditor_Left_TrackpadUp",
+			"/actions/main/in/VREditor_Left_ConfirmRadialSelection": "VREditor_Left_ConfirmRadialSelection",
+			"/actions/main/in/VREditor_Left_Touch": "VREditor_Left_Touch",
+			"/actions/main/in/VREditor_Left_Modifier2": "VREditor_Left_Modifier2",
+			"/actions/main/in/VREditor_Right_WorldMovement": "VREditor_Right_WorldMovement",
+			"/actions/main/in/VREditor_Right_Modifier": "VREditor_Right_Modifier",
+			"/actions/main/in/VREditor_Right_TrackpadDown": "VREditor_Right_TrackpadDown",
+			"/actions/main/in/VREditor_Right_TrackpadLeft": "VREditor_Right_TrackpadLeft",
+			"/actions/main/in/VREditor_Right_TrackpadRight": "VREditor_Right_TrackpadRight",
+			"/actions/main/in/VREditor_Right_TrackpadUp": "VREditor_Right_TrackpadUp",
+			"/actions/main/in/VREditor_Right_ConfirmRadialSelection": "VREditor_Right_ConfirmRadialSelection",
+			"/actions/main/in/VREditor_Right_Touch": "VREditor_Right_Touch",
+			"/actions/main/in/VREditor_Right_Modifier2": "VREditor_Right_Modifier2",
 			"/actions/main/in/LeftTriggerPull axis": "LeftTriggerPull",
 			"/actions/main/in/RightTriggerPull axis": "RightTriggerPull",
 			"/actions/main/in/MotionControllerThumbLeft_X,MotionControllerThumbLeft_Y X Y_axis2d": "MotionControllerThumbLeft",
 			"/actions/main/in/MotionControllerThumbRight_X,MotionControllerThumbRight_Y X Y_axis2d": "MotionControllerThumbRight",
+			"/actions/main/in/VREditor_Left_TriggerAxis axis": "VREditor_Left_TriggerAxis",
+			"/actions/main/in/VREditor_Left_WorldMovement axis": "VREditor_Left_WorldMovement",
+			"/actions/main/in/VREditor_Right_TriggerAxis axis": "VREditor_Right_TriggerAxis",
 			"/actions/main": "Main Game Actions"
 		}
 	]
