--- a/Config/steamvr_ue_editor_app.json
+++ b/Config/steamvr_ue_editor_app.json
@@ -2,7 +2,7 @@
 	"source": "UE",
 	"applications": [
 		{
-			"app_key": "application.generated.ue.fsd-0.ue4editor.exe",
+			"app_key": "application.generated.ue.fsd-18319896.ue4editor.exe",
 			"launch_type": "url",
 			"url": "steam://launch/",
 			"action_manifest_path": "D:/Unreal Projects/virtual-rock-galactic/Config/SteamVRBindings/steamvr_manifest.json",
@@ -10,7 +10,7 @@
 			{
 				"en_us":
 				{
-					"name": "FSD-0 [UE Editor]"
+					"name": "FSD-18319896 [UE Editor]"
 				}
 			}
 		}
