- high chance i fixed the crashing - by setting the dummied directories to never cook in project settings

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,10 +1,80 @@
 
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-bShareMaterialShaderCode=False
-UsePakFile=False
-bGenerateChunks=False
-IncludeDebugFiles=False
-Build=Never
+Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
+BuildTarget=
+StagingDirectory=(Path="D:/Unreal Projects/virtual-rock-galactic/Build")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=False
+bUseIoStore=False
+bMakeBinaryConfig=False
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+bCompressed=False
+PakFileCompressionFormats=
+bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
+PakFileAdditionalCompressionOptions=
+PakFileCompressionMethod=Kraken
+PakFileCompressionLevel_DebugDevelopment=3
+PakFileCompressionLevel_TestShipping=5
+PakFileCompressionLevel_Distribution=7
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=False
+bDeterministicShaderCodeOrder=False
+bSharedMaterialNativeLibraries=True
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+LocalizationTargetCatchAllChunkId=0
+bCookAll=False
+bCookMapsOnly=False
+bSkipEditorContent=False
+bSkipMovies=False
+-IniKeyBlacklist=KeyStorePassword
+-IniKeyBlacklist=KeyPassword
+-IniKeyBlacklist=rsa.privateexp
+-IniKeyBlacklist=rsa.modulus
+-IniKeyBlacklist=rsa.publicexp
+-IniKeyBlacklist=aes.key
+-IniKeyBlacklist=SigningPublicExponent
+-IniKeyBlacklist=SigningModulus
+-IniKeyBlacklist=SigningPrivateExponent
+-IniKeyBlacklist=EncryptionKey
+-IniKeyBlacklist=IniKeyBlacklist
+-IniKeyBlacklist=IniSectionBlacklist
++IniKeyBlacklist=KeyStorePassword
++IniKeyBlacklist=KeyPassword
++IniKeyBlacklist=rsa.privateexp
++IniKeyBlacklist=rsa.modulus
++IniKeyBlacklist=rsa.publicexp
++IniKeyBlacklist=aes.key
++IniKeyBlacklist=SigningPublicExponent
++IniKeyBlacklist=SigningModulus
++IniKeyBlacklist=SigningPrivateExponent
++IniKeyBlacklist=EncryptionKey
++IniKeyBlacklist=IniKeyBlacklist
++IniKeyBlacklist=IniSectionBlacklist
++DirectoriesToNeverCook=(Path="/Game/Art")
++DirectoriesToNeverCook=(Path="/Game/Character")
++DirectoriesToNeverCook=(Path="/Game/Game")
++DirectoriesToNeverCook=(Path="/Game/GameElements")
++DirectoriesToNeverCook=(Path="/Game/Landscape")
++DirectoriesToNeverCook=(Path="/Game/LevelElements")
++DirectoriesToNeverCook=(Path="/Game/UI")
++DirectoriesToNeverCook=(Path="/Game/WeaponsNTools")
 
