- prevented more directories from cooking (might prevent crashing for good)

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -77,4 +77,8 @@ bSkipMovies=False
 +DirectoriesToNeverCook=(Path="/Game/LevelElements")
 +DirectoriesToNeverCook=(Path="/Game/UI")
 +DirectoriesToNeverCook=(Path="/Game/WeaponsNTools")
++DirectoriesToNeverCook=(Path="/Engine")
++DirectoriesToNeverCook=(Path="/Niagara")
++DirectoriesToNeverCook=(Path="/OpenXR")
++DirectoriesToNeverCook=(Path="/OculusVR")
 
