- SHOTGUN PERFECT HAND POSITION

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -55,3 +55,6 @@
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.Engine]
+NearClipPlane=1.000000
+
